@@ -2,6 +2,12 @@
 
 	* flumotion/component/producers/asfparse.py:
 	* flumotion/component/producers/wms.py:
+	  Fix up padding API. Now works.
+
+2007-02-21  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/asfparse.py:
+	* flumotion/component/producers/wms.py:
 	  Commit asf parser (not tested yet).
 
 2007-02-20  Michael Smith  <msmith@fluendo.com>
